force-app/main/default/objects/xtma_Link_Detail__c/xtma_Link_Detail__c.object-meta.xml
<CustomObject>
    <label>Link Detail</label>
    <nameField>
        <label>Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Link Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>