force-app/main/default/objects/xtma_Link_Detail__c/fields/Email_Result__c.field-meta.xml
<CustomField>
    <fullName>Email_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Result</label>
    <referenceTo>xtma_Email_Result__c</referenceTo>
    <relationshipLabel>Link Details</relationshipLabel>
    <relationshipName>R00N30000001MXecEAG</relationshipName>
    <type>Lookup</type>
</CustomField>