force-app/main/default/objects/xtma_Link_Detail__c/fields/Individual_Email_Result__c.field-meta.xml
<CustomField>
    <fullName>Individual_Email_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Email Result</label>
    <referenceTo>xtma_Individual_Email_Result__c</referenceTo>
    <relationshipLabel>Link Details</relationshipLabel>
    <relationshipName>R00N30000001MXedEAG</relationshipName>
    <type>Lookup</type>
</CustomField>