force-app/main/default/objects/xtma_Link_Detail__c/fields/Last_Clicked__c.field-meta.xml
<CustomField>
    <fullName>Last_Clicked__c</fullName>
    <label>Last Clicked</label>
    <type>DateTime</type>
</CustomField>